# vita-hello-triangle

./: CMakeLists.txt  README.md
shaders/: fragment.frag  vertex.vert
src/: main.cpp
